--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://practicas-backend-fg.onrender.com/
+VITE_API_URL=https://buensaborbruno.onrender.com
+#https://practicas-backend-fg.onrender.com/
