--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=https://buensaborbruno.onrender.com
+VITE_API_URL=http://localhost:8080
+#https://buensaborbruno.onrender.com
 #https://practicas-backend-fg.onrender.com/
