--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:8080
-#https://buensaborbruno.onrender.com
+VITE_API_URL=https://buensaborbruno.onrender.com
+#http://localhost:8080
 #https://practicas-backend-fg.onrender.com/
